@@ -8,7 +8,6 @@
     :license: BSD, see LICENSE for details.
 #}
 {% macro indexentries(firstname, links) %}
-  <dt>
   {%- if links -%}
     <a href="{{ links[0][1] }}">
     {%- if links[0][0] %}<strong>{% endif -%}
@@ -25,7 +24,6 @@
   {%- else %}
     {{ firstname|e }}
   {%- endif %}
-  </dt>
 {% endmacro %}
 
 {%- extends "layout.html" %}
@@ -36,18 +34,18 @@
 
 <table style="width: 100%" class="indextable"><tr>
   {%- for column in entries|slice(2) if column %}
-  <td style="width: 33%" valign="top"><dl>
+  <td style="width: 33%; vertical-align: top;"><ul>
     {%- for entryname, (links, subitems, _) in column %}
-      {{ indexentries(entryname, links) }}
+      <li>{{ indexentries(entryname, links) }}</li>
       {%- if subitems %}
-      <dd><dl>
+      <ul>
       {%- for subentryname, subentrylinks in subitems %}
-        {{ indexentries(subentryname, subentrylinks) }}
+        <li>{{ indexentries(subentryname, subentrylinks) }}</li>
       {%- endfor %}
-      </dl></dd>
-      {%- endif -%}
+      </ul>
+      {%- endif -%}</li>
     {%- endfor %}
-  </dl></td>
+  </ul></td>
   {%- endfor %}
 </tr></table>
 
