@@ -41,6 +41,7 @@ Incompatible changes
 * ``sphinx.ext.viewcode`` disabled on singlehtml builder.
 * Use make-mode of ``sphinx-quickstart`` by default.  To disable this, use
   ``-M`` option
+* Fix ``genindex.html`` to satisfy xhtml standard.
 
 Features added
 --------------
